SVY-8531 fix vertical scrollbar appears even if page doesn't needs one
Conflicts:
	servoy_mobile/src/com/servoy/mobile/client/ui/FormPage.java

--- a/servoy_mobile/src/com/servoy/mobile/public/servoy.css
+++ b/servoy_mobile/src/com/servoy/mobile/public/servoy.css
@@ -85,9 +85,3 @@ label.label-labelfor
 .ui-panel-content-wrap-position-left.ui-panel-content-wrap-display-push.ui-panel-content-wrap-open {
 	margin-right: 17em;
 }
-
-/* Needed because of JQM bug, see SVY-8468 */
-.ui-mobile-viewport-transitioning,
-.ui-mobile-viewport-transitioning .ui-page {
-	overflow: visible;
-}
